[gd_scene load_steps=6 format=2]

[ext_resource path="res://Background/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://PointMassStar/PointMassStar.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ship/Ship.tscn" type="PackedScene" id=4]
[ext_resource path="res://Main/Main.gd" type="Script" id=5]

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="PointMassStar" parent="." instance=ExtResource( 2 )]
gravity = 257.068

[node name="P1" parent="." instance=ExtResource( 4 )]
starting_offset = Vector2( -200, 0 )
starting_velocity = Vector2( 0, 200 )
starting_rotation = 180.0
action_forward = "p1_forward"
action_left = "p1_left"
action_right = "p1_right"
action_fire = "p1_fire"
colour = Color( 1, 0, 0, 1 )

[node name="P2" parent="." instance=ExtResource( 4 )]
starting_offset = Vector2( 200, 0 )
starting_velocity = Vector2( 0, -200 )
action_forward = "p2_forward"
action_left = "p2_left"
action_right = "p2_right"
action_fire = "p2_fire"
colour = Color( 0, 0.913725, 0.0980392, 1 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="RestartTimer" type="Timer" parent="."]
one_shot = true
[connection signal="died" from="P1" to="." method="_on_P1_died"]
[connection signal="died" from="P2" to="." method="_on_P2_died"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
